--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Result Summary Project</title>
 
   <link rel="stylesheet" href="styles.css">
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -46,7 +50,7 @@
               <span class="icon"><i class="fa-solid fa-lightbulb"></i></span>
               <span class="reaction">Reaction</span>
             </div>
-            <div><span class="separate-result">80</span><span class="from-total">/ 100</span> </div>
+            <div><span class="separate-result">80</span><span class="from-total"> / 100</span> </div>
           </div>
 
           <div class="left-right-container memory-bg">
@@ -54,7 +58,7 @@
               <span class="icon"><i class="fa-solid fa-brain"></i></span>
               <span class="memory">Memory</span>
             </div>
-            <div><span class="separate-result">92</span><span class="from-total">/ 100</span> </div>
+            <div><span class="separate-result">92</span><span class="from-total"> / 100</span> </div>
           </div>
 
           <div class="left-right-container verbal-bg">
@@ -62,7 +66,7 @@
               <span class="icon"><i class="fa-solid fa-volume-low"></i></span>
               <span class="verbal">Verbal</span>
             </div>
-            <div><span class="separate-result">61</span><span class="from-total">/ 100</span> </div>
+            <div><span class="separate-result">61</span><span class="from-total"> / 100</span> </div>
           </div>
 
           <div class="left-right-container visual-bg">
@@ -70,7 +74,7 @@
               <span class="icon"><i class="fa-solid fa-eye"></i></span>
               <span class="visual">Visual</span>
             </div>
-            <div><span class="separate-result">72</span><span class="from-total">/ 100</span> </div>
+            <div><span class="separate-result">72</span><span class="from-total"> / 100</span> </div>
           </div>
         </div>
         <button>CONTINUE</button>
